<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">CtTool</string>

    <string name="app_permission_toast">CtTool Need all permission granted!</string>

    <string name="apk_info_menu_search">Search</string>
    <string name="apk_info_menu_export">Export</string>

    <string name="title_activity_base">ApkBaseInfoListActivity</string>
    <string name="title_activity_apk_info_selector">ApkInfoSelector</string>
    <string name="text_line_format_label_value" translatable="false">
        "【 <xliff:g id="label">%s</xliff:g> 】<xliff:g id="value">%s</xliff:g>"
    </string>
    <string name="text_line_format_title_summary" translatable="false">
        "【 <xliff:g id="label">%s</xliff:g> 】\n\t\t<xliff:g id="summary">%s</xliff:g>"
    </string>
    <string name="text_line_format_title_summary_no_tab" translatable="false">
        "【 <xliff:g id="label">%s</xliff:g> 】\n<xliff:g id="summary">%s</xliff:g>"
    </string>

    <string name="fragment_app_list">App List</string>
    <string name="fragment_app_list_all">All apps</string>
    <string name="fragment_app_list_shortcut">Shortcut apps</string>
    <string name="fragment_app_list_home">Home apps</string>
    <string name="fragment_app_list_ime">IME apps</string>
    <string name="fragment_app_list_widget">Widget apps</string>
    <string name="fragment_app_list_project">Project</string>

    <string name="fragment_app_list_third_app">Third app</string>
    <string name="fragment_app_list_system_app">Google</string>

    <string name="fragment_music">Music control</string>

    <string name="fragment_config">Configuration</string>
    <string name="fragment_config_label_lcm_size">H x W</string>
    <string name="fragment_config_label_local">Local</string>
    <string name="fragment_config_label_local_code">Local code</string>
    <string name="fragment_config_label_local_mcc_mnc" translatable="false">MccMnc</string>
    <string name="fragment_config_label_product">Product</string>
    <string name="fragment_config_label_density">Density</string>
    <string name="fragment_config_format_ime" translatable="false">
        "<xliff:g id="imeName">%s</xliff:g>,<xliff:g id="subtypeInfo">%s</xliff:g>\n<xliff:g id="component">%s</xliff:g>"
    </string>
    <string name="fragment_config_format_ime_subtype" translatable="false">
        "<xliff:g id="subtypeHashCode">%s</xliff:g> {<xliff:g id="local">%s</xliff:g>, <xliff:g id="displayName">%s</xliff:g>}"
    </string>

    <string name="fragment_sim">Sim</string>

    <string name="fragment_test">Test</string>
    <string name="fragment_sensor" translatable="false">Sensor</string>

    <string name="fragment_development">link Development</string>
    <string name="fragment_development_action" translatable="false">"com.android.settings.APPLICATION_DEVELOPMENT_SETTINGS"</string>

    <string name="fragment_local">link Local</string>
    <string name="fragment_local_action" translatable="false">"android.settings.LOCALE_SETTINGS"</string>
    <string name="fragment_ime_action" translatable="false">"android.settings.INPUT_METHOD_SETTINGS"</string>


</resources>
